# Opus-3D-Engine

./: .clang-format  .gitignore  CONTRIBUTING.md  meson.build  meson_options.txt  windows-native.ini
docs/: development.md  roadmap.md  source_header.txt  todo.txt
editor/: meson.build
engine/: engine.hpp  meson.build
foundation/: meson.build
game/: meson.build
src/editor/: editor_application.cpp  editor_application.hpp  editor_win32.manifest  main.cpp  meson.build
src/editor/include/: editor_application.hpp
src/editor/src/: editor_application.cpp  main.cpp
src/engine/: meson.build
src/engine/core/: application.cpp  application.hpp  engine.cpp  engine.hpp
src/engine/core/include/: engine.hpp  engine_config.hpp  engine_context.hpp  engine_result.hpp  engine_target_info.hpp
src/engine/core/src/: engine.cpp
src/engine/input/include/: input_system.hpp
src/engine/input/src/: input_system.cpp  input_window_listener.cpp
src/engine/tasks/include/: task.hpp  task_system.hpp
src/foundation/: foundation_placeholder.cpp  meson.build
src/foundation/application/: meson.build
src/foundation/application/include/: application.hpp  event_poller.hpp
src/foundation/application/src/: application.cpp
src/foundation/application/src/platform/windows/: win32_application.cpp  win32_event_poller.cpp
src/foundation/containers/: meson.build
src/foundation/containers/include/: container_error.hpp  flat_hash_map.hpp  hash.hpp  string.hpp  vector_dynamic.hpp  vector_static.hpp
src/foundation/containers/src/: container_error.cpp  string.cpp
src/foundation/core/: meson.build
src/foundation/core/include/: assert.hpp  core.hpp  error_code.hpp  error_domain.hpp  expected.hpp  panic.hpp  platform_types.hpp  result.hpp  source_location.hpp  system_error.hpp
src/foundation/core/src/: panic.cpp  system_error.cpp
src/foundation/core/src/platform/windows/: win32_helpers.cpp  win32_helpers.hpp
src/foundation/fibers/: fiber.hpp  fibers_stub.cpp  meson.build
src/foundation/fibers/boost/: fcontext.hpp
src/foundation/fibers/boost/asm/x86_64/win/: make_x86_64_ms_pe_masm.masm
src/foundation/fibers/include/: fiber.hpp
src/foundation/fibers/src/: fcontext.cpp
src/foundation/fibers/src/asm/ppc32/: tail_ontop_ppc32_sysv.cpp
src/foundation/fibers/src/asm/x86_64/win/: ontop_x86_64_ms_pe_masm.masm
src/foundation/filesystem/include/: file.hpp  path_view8.hpp
src/foundation/filesystem/src/platform/windows/: file_win32.cpp
src/foundation/memory/: meson.build
src/foundation/memory/include/: alignment.hpp  allocator.hpp  heap_allocator.hpp  linear_allocator.hpp  memory.hpp  memory_error.hpp  pages.hpp  virtual_range.hpp
src/foundation/memory/src/: heap_allocator.cpp  linear_allocator.cpp  memory_error.cpp  virtual_range.cpp
src/foundation/memory/src/platform/linux/: pages_linux.cpp
src/foundation/memory/src/platform/windows/: pages_win32.cpp
src/foundation/simd/include/: simd_128.hpp  simd_concepts.hpp  simd_config.hpp  simd_dispatch.hpp
src/foundation/vulkan/: meson.build  vulkan_stub.cpp
src/foundation/window/include/: input_event.hpp  window.hpp  window_defs.hpp  window_event_listener.hpp  window_input_listener.hpp
src/foundation/window/src/: window.cpp
src/foundation/window/src/platform/windows/: window_win32.cpp  window_win32.hpp
src/game/: game_application.cpp  game_application.hpp  game_win32.manifest  main.cpp  meson.build
src/game/include/: game_application.hpp
src/game/src/: game_application.cpp  main.cpp
src/gfx/vulkan/: meson.build
tests/: main.cpp  meson.build  test_framework.cpp  test_framework.hpp  tests_win32.manifest
tests/unit_tests/foundation/: container_tests.cpp  fiber_tests.cpp
tools/: install_dependencies.bat  install_dependencies.sh  setup.bat
tools/vscode-test-adapter/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
tools/vscode-test-adapter/src/: extension.ts
